# wisco_opensim

./: CMakeLists.txt  README.md
dependencies/coldet/: CMakeLists.txt  sysdep.cpp  sysdep.h
dev_tools/: CMakeLists.txt
dev_tools/helper_functions/: WISCO_HelperFunctions.cpp  WISCO_HelperFunctions.h
dev_tools/settings/: CMakeLists_test.txt  WISCO_Settings.cpp  WISCO_Settings.h
documentation/: To_Do_List  To_Do_List.md  contact_details.pptx
examples/: CMakeLists.txt
examples/cmd/visualizeContact/: ContactAnalysis_settings.xml  knee_flex_40_activation_0.5_results.mot  visualizeContact.cmd
examples/cmd/visualizeContact/Geometry/: ACLC01-R-patella-cart.stl
examples/exampleFBKneePassiveFlexion/: CMakeLists.txt  exampleFBKneePassive.cpp  exampleFBKneePassive.h
examples/exampleFBKneePassiveFlexion/analysis/: analyze_passive_flexion.m
examples/exampleFBKneePassiveFlexion/inputs/: ContactAnalysis_settings.xml  fbknee.osim  fbknee_knee_only.osim  fbknee_millardMuscle.osim
examples/exampleFBKneePassiveFlexion/inputs/Geometry/: ACLC01-R-patella-cart.asc  ACLC01-R-tibia-cart.asc
examples/exampleFBKneeQuadsLoad/: CMakeLists.txt  exampleFBKneeQuadsLoad.cpp  exampleFBKneeQuadsLoad.h
examples/exampleFBKneeQuadsLoad/analysis/: raw_analyze_flexion.m
examples/exampleFBKneeQuadsLoad/inputs/: fbknee.osim  kfec_halfhz_0050.mot
examples/exampleFBKneeQuadsLoad/inputs/Geometry/: ACLC01-R-femur-cart-wicked-coarse.stl
examples/exampleVisualizeContact/: CMakeLists.txt  exampleVisualizeContact.cpp  exampleVisualizeContact.h
examples/exampleVisualizeContact/inputs/: ContactAnalysis_settings.xml  fbknee.osim
examples/exampleVisualizeContact/inputs/Geometry/: ACLC01-R-tibia-cart-wicked-coarse.stl
sandbox/: CMakeLists.txt
sandbox/buildBallFloorModel/: CMakeLists.txt  buildContactBallFloor.cpp
sandbox/buildFBKnee/: CMakeLists.txt  buildFBKnee.cpp
sandbox/buildFBKnee/inputs/: JKRLfbkid_ver_4_0_ligs.osim
sandbox/wipCOMAKMain/: CMakeLists.txt  COMAKParameters.cpp  COMAKParameters.h  wipCOMAKMain.cpp  wipCOMAKMain.h
sandbox/wipCOMAKMain/inputs/: aclc01.osim  aclc01_scale_factors.xml  overground_17_invkin_opensim.mot  overground_17_mfd_opensim.mot  scale1_output.mot  scale_settings.xml
sandbox/wipContactAnalysis/: CMakeLists.txt  wipContactAnalysis.cpp  wipContactAnalysis.h
sandbox/wipContactAnalysis/inputs/: ContactAnalysis_settings.xml  ContactBallFloor.mot  ball_and_floor.osim
sandbox/wipContactAnalysis/inputs/Geometry/: half_ball_coarse.stl
sandbox/wipJointStiffness/: CMakeLists.txt  mainJointStiffness.cpp
tests/: CMakeLists.txt
tests/shared/: ball_and_floor.osim
tests/shared/ball_and_floor/: ball_and_floor.osim
tests/shared/ball_and_floor/geometry/: floor_coarse.stl  half_ball_wicked_coarse.stl
tests/shared/fbknee/: fbknee_simple.osim
tests/testContactAnalysis/: CMakeLists.txt  testContactAnalysis.cpp
tests/testContactAnalysis/inputs/: ContactAnalysis_settings.xml  fbknee_passive_flex.mot
tests/testContactBallFloor/: CMakeLists.txt  testContactBallFloor.cpp  testContactBallFloor.h
tests/testContactBallFloor/archive/: WISCO_ContactMesh.cpp  WISCO_ContactMesh.h  WISCO_ElasticFoundationForce.cpp  WISCO_ElasticFoundationForce.h  testContactBallFloor.cpp
tests/testContactBallFloor/archive/v1/: WISCO_ContactMesh.cpp  WISCO_ContactMesh.h  WISCO_ElasticFoundationForce.cpp  testContactBallFloor.cpp  testContactBallFloor.h
tests/testContactBallFloor/archive/v2/: WISCO_ContactMesh.cpp  WISCO_ContactMesh.h  WISCO_ElasticFoundationForce.cpp  WISCO_ElasticFoundationForce.h  WISCO_VTKFileAdapter.cpp  WISCO_VTKFileAdapter.h  testContactBallFloor.cpp
tests/testContactBallFloor/inputs/: ContactAnalysis_settings.xml
tests/testContactBallFloor/results/ball_contact/: ball_contact_0.vtk  ball_contact_1.vtk  ball_contact_10.vtk  ball_contact_100.vtk  ball_contact_11.vtk  ball_contact_12.vtk  ball_contact_13.vtk  ball_contact_14.vtk  ball_contact_15.vtk  ball_contact_16.vtk  ball_contact_17.vtk  ball_contact_18.vtk  ball_contact_19.vtk  ball_contact_2.vtk  ball_contact_20.vtk  ball_contact_21.vtk  ball_contact_22.vtk  ball_contact_23.vtk  ball_contact_24.vtk  ball_contact_25.vtk  ball_contact_26.vtk  ball_contact_27.vtk  ball_contact_28.vtk  ball_contact_29.vtk  ball_contact_3.vtk  ball_contact_30.vtk  ball_contact_31.vtk  ball_contact_32.vtk  ball_contact_33.vtk  ball_contact_34.vtk  ball_contact_35.vtk  ball_contact_36.vtk  ball_contact_37.vtk  ball_contact_38.vtk  ball_contact_39.vtk  ball_contact_4.vtk  ball_contact_40.vtk  ball_contact_41.vtk  ball_contact_42.vtk  ball_contact_43.vtk  (+61 more)
tests/testContactBallFloor/results/ball_contact_coarse/: ball_contact_0.vtk  ball_contact_1.vtk  ball_contact_10.vtk  ball_contact_11.vtk  ball_contact_12.vtk  ball_contact_13.vtk  ball_contact_14.vtk  ball_contact_15.vtk  ball_contact_16.vtk  ball_contact_17.vtk  ball_contact_18.vtk  ball_contact_19.vtk  ball_contact_2.vtk  ball_contact_20.vtk  ball_contact_21.vtk  ball_contact_22.vtk  ball_contact_23.vtk  ball_contact_24.vtk  ball_contact_25.vtk  ball_contact_26.vtk  ball_contact_27.vtk  ball_contact_28.vtk  ball_contact_29.vtk  ball_contact_3.vtk  ball_contact_30.vtk  ball_contact_4.vtk  ball_contact_5.vtk  ball_contact_6.vtk  ball_contact_7.vtk  ball_contact_8.vtk  ball_contact_9.vtk
tests/testContactForce/: CMakeLists.txt  testContactForce.cpp
tests/testContactForce/inputs/: ContactAnalysis_settings.xml
tests/testFBKneePassive/: CMakeLists.txt  testFBKneePassive.cpp
tests/testFBKneePassive_Menicus/: CMakeLists.txt  testFBKneePassive_Meniscus.cpp
tests/testKneeContact/: CMakeLists.txt  testKneeContact.cpp  testKneeContact.h
tests/testKneeContact/inputs/: ContactAnalysis_settings.xml
tests/testWISCOLigament/: CMakeLists.txt  testWISCOLigament.cpp  testWISCOLigament.h
tests/testWISCOLigament/inputs/geometry/: block.stl
tests/testWISCOLigament/model/: simple_ligament.osim
tests/testWISCOLigament/model/geometry/: ball.stl  ball_coarse.stl
tests/testWISCOVTPFileAdapter/: CMakeLists.txt  testWISCOVTPFileAdapter.cpp  testWISCOVTPFileAdapter.h
(+87 files in other folders)
